--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/favicon (3).ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Paulina Herrera - English Major</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Paulina Herrera</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
       </span>
@@ -58,26 +58,29 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Paulina Herrera
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">English Major 🏫
+        <p class="lead mb-4">Paulina Herrera is a current second year english major at the University of California Riverside. She is passionate when it comes to academia and especially in the dissemination of knowledge. Paulina hopes to pursue higher education and later on obtain a job within the university field as a professor. Currently, she offers her services as a writing tutor for fellow students as well as highschool students, and is also a freelance editor. Paulina began her journey through volunteer work at her local elementary schools. During highschool she volunteered at the A.L.L. Program, for two years, in which she created lesson plans and helped children with homework. She was also in charge of conversing with parents and communicating the child's progress in their schoolwork and grades. This helped her realize the importance and impact education has on people's day to day lives. Her goal is to enable others to learn more and seek out academic opportunities, she believes this can be done by making learning interesting. Her goal is to make education accessible and enjoyable for future generations.
+ <br><br>
 
-        Enter bio here<br><br>
+During the same time Paulina was volunteering she also began a job as a tutor and translator, for a child with language disabilities at Richstone. She learned to be patient and the protocol for how one should go about teaching children with disabilities. She also learned the importance of taking into consideration the client and how they feel as well. Paulina was able to learn how to adapt her teaching style depending on the person. She also was able to use her ability to speak spanish as a bridge between her employer and the parents of the child. Her journey as a language tutor and translator lasted for three years and she has continued to maintain a good relationship with her employer and her client. After entering university Paulina continued her journey in education by volunteering at her alma mater for the AP English Literature class. There she honed her editing and critical skills when it came to writing while also helping others. 
+ <br><br>
 
-        Enter bio here
+        If you are interested in the services that Paulina provides as a writing tutor and a freelance editor, for both college, highschool students, and children feel free to contact her through her email which is pherr011@ucr.edu  or her phone number 213- 882-3151. The first meeting or phone call will be a consultation, it is free of cost, as it is important to identify what type of help is needed. Similarly, the first tutoring session is half-priced in order for the client to see if it is a good fit for them.For costs it is by hourly and depending on the level of difficulty ranges in prices. Most often she will work around your schedule to make the process as easy and simple for the client as possible. However, in general Paulina’s services are available on the weekend afternoons( unless it is a holiday) and Monday, Wednesday and Thursdays between 2pm and 6pm(unless it is a holiday).  
+
         </p>
         <div class="social-icons">
           <a target="_blank" href="https://linkedin.com">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/Paulina-Herrera/PaulinaHerrera.git">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
+          <a target="_blank" href="https://twitter.com/freythekid">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:pherr011@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +95,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Volunteer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">A.L.L. Program</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Created lesson plans<br> 
+              • Helped with Homework<br>
+              • Experience with talking and communication with parents<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">April 2016 - 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">Volunteer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Hawthorne Math and Science Academy</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Profreeded essays and written pieces<br>
+              • Taught basic writing skills and pratcices<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">August - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Language Tutor and Translator</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Richstone</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Taught english and pronuncation<br>
+            • Reviewed progress and informed employer<br>
+            • Created assignments and practices<br>
+            • Acted as a translator between employer and parents<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">July 2017 - September 2019</span>
           </div>
         </div>
 
@@ -152,37 +155,12 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors of English</div>
+            <div>BA in English(in progress)</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2018 - June 2022</span>
           </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
-      </div>
     </section>
 
     <hr class="m-0">
@@ -191,15 +169,18 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
-        </center>
+            <img src="img/children (5).jpg" width="300px>">
+            <img src="img/School.jpg" width="300px>"><br> 
+            <img src="img/Richstone.png" width="300px>"> 
+            <img src="img/Kid.jpg" width="300px>"><br> 
+       </center>
       </div>
     </section>
 
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Paulina Herrera</center><br>
 
 
   </div>
